@@ -7,8 +7,8 @@
 #
 # Generated by gnulib-tool.
 #
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit gettext pathmax regex restrict save-cwd vasnprintf xalloc xgetcwd xsize
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname gettext pathmax regex restrict save-cwd vasnprintf xalloc xgetcwd xsize
 
 AC_DEFUN([gl_EARLY],
 [
@@ -21,6 +21,7 @@ AC_DEFUN([gl_INIT],
   gl_FUNC_ALLOCA
   gl_FUNC_ALLOCA
   gl_FUNC_ATEXIT
+  gl_DIRNAME
   dnl you must add AM_GNU_GETTEXT([external]) or similar to configure.ac.
   gl_PATHMAX
   gl_REGEX
